History
=======

Version 0.3
-----------

- Use email.Header module for message header formatting
  Refactored mail.py to create messages MIMEMultipart based
  [naro]
  
- added Czech translation
  [naro]
  
Version 0.2
-----------

- Commit after pulling a message from the queue.
  [nouri]

- ITransform is now an adapter on the content being transformed
  instead of a utility.  This allows us to use the content's URL
  when rewriting links.
  [tmog]

- updated pot and danish translation
  [bartholdy]

- Add button to subscribe form to "Send my subscription details",
  for when subscribers forgot their secret.
  [nouri]

- Cleaned up a bit in a few templates. Needed to structure
  view/Desvription in wizard. Got rid of annoying label filters in
  wizard-step.
  [bartholdy]